Tidied file locations

--- a/html/2-14/styles.css
+++ b/html/2-14/styles.css
@@ -127,7 +127,7 @@ body {
     background-size: cover;
     background-position: center center;
     background-repeat: no-repeat;
-    background-image: url("../filip.png");
+    background-image: url("filip.png");
     margin-left: 9px;
     margin-right: 9px;
 }
