--- a/html/2-16/styles.css
+++ b/html/2-16/styles.css
@@ -2,4 +2,16 @@ body {
     margin: 0;
     height: 100vh;
     width: 100vw;
+    display: flex;
+    flex-direction: column
+}
+
+.header {
+    display: grid;
+    grid-template-columns: 15% 15% auto 15% 15%;
+}
+
+.page {
+    display: flex;
+    flex-direction: row;
 }
