--- a/javascript/2-21/styles/stylesheet.css
+++ b/javascript/2-21/styles/stylesheet.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Berkshire+Swash|BioRhyme+Expanded');
+@import url('https://use.fontawesome.com/releases/v5.0.6/css/all.css');
 
 body {
     margin: 0;
@@ -23,7 +24,7 @@ body {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: flex-start;
+    justify-content: center;
 }
 
 .preview-image {
@@ -67,8 +68,49 @@ body {
     align-items: center;
 }
 
-#lightbox > img {
+.container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.left-arrow {
+    height: 100%;
+    width: 10%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    font-size: 40px;
+}
+
+.left-arrow:hover {
+    background-color: rgba(100, 100, 100, 0.3);
+}
+
+.right-arrow {
+    height: 100%;
+    width: 10%;
+    position: absolute;
+    top: 0;
+    right: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    font-size: 40px;
+}
+
+.right-arrow:hover {
+    background-color: rgba(100, 100, 100, 0.3);
+}
+
+.container > img {
     max-height: 90%;
+    max-width: 90%;
     border-top: 4px solid gray;
     border-right: 4px solid black;
     border-bottom: 4px solid black;
