--- a/coffeerun/styles/stylesheet.css
+++ b/coffeerun/styles/stylesheet.css
@@ -4,12 +4,14 @@
     border-radius: 5%;
     border: 1px solid darkgray;
     box-shadow: 1px 1px 1px lightgray;
+    text-decoration: none;
 }
 
 .complete-button:hover {
     background-color: green;
     border: 2px solid gray;
     box-shadow: 2px 2px 2px lightgray;
+    text-decoration: none;
 }
 
 .order-item {
@@ -18,4 +20,10 @@
     padding: 5px;
     border-top: 1px dashed gray;
     border-bottom: 1px dashed gray;
+}
+
+.order-complete {
+    background-color: rgb(115, 168, 7);
+    border: 1px solid green;
+    transition: all 0.5s ease-out;
 }
