--- a/coffeerun/styles/stylesheet.css
+++ b/coffeerun/styles/stylesheet.css
@@ -14,6 +14,16 @@
     text-decoration: none;
 }
 
+.undo-button {
+    padding: 2px;
+    background-color: red;
+    color: white;
+    border-radius: 5%;
+    border: 1px solid darkgray;
+    box-shadow: 1px 1px 1px lightgray;
+    text-decoration: none;
+}
+
 .order-item {
     display: inline-block;
     box-sizing: content-box;
