--- a/javascript/3-02/styles/stylesheet.css
+++ b/javascript/3-02/styles/stylesheet.css
@@ -4,20 +4,22 @@ body {
     height: 100vh;
 }
 
+canvas {
+    border: 1px solid gray;
+}
+
 #grid-container {
     width: 100%;
     height: 100%;
     display: grid;
-    grid-template-columns: repeat(200, 1fr);
-    grid-template-rows: repeat(200, 1fr);
+    grid-template-columns: repeat(100, 1fr);
+    grid-template-rows: repeat(100, 1fr);
 }
 
 .live-cell {
-    border: 0.5px solid lightgray;
     background-color: black;
 }
 
 .dead-cell {
-    border: 0.5px solid lightgray;
     background-color: white;
 }
