--- a/javascript/4-11/styles.css
+++ b/javascript/4-11/styles.css
@@ -25,12 +25,12 @@ body {
 }
 
 .react-list {
-  width: 80%;
+  width: 90%;
   margin-top: 50px;
   margin-bottom: 50px;
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
+  justify-content: space-between;
 }
 
 .post {
