--- a/javascript/4-13/styles.css
+++ b/javascript/4-13/styles.css
@@ -12,11 +12,14 @@ body {
 .react-root {
   width: 100%;
   height: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
 }
 
 .gol-grid {
-  width: 100%;
-  height: 100%;
+  border: 1px solid black;
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -26,7 +29,6 @@ body {
 .gol-cell {
   width: 5px;
   height: 5px;
-  border: 1px solid black;
 }
 
 .live {
