--- a/javascript/ecom-site/src/index.css
+++ b/javascript/ecom-site/src/index.css
@@ -1,5 +1,55 @@
+@import url('https://fonts.googleapis.com/css?family=Abril+Fatface|Roboto');
+
 body {
+  width: 100vw;
+  height: 100vh;
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+}
+
+#root {
+  width: 100%;
+  height: 100%;
+}
+
+.App {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: row;
+}
+
+.Sidebar {
+  width: 20%;
+  height: 100%;
+  border-right: 2px solid black;
+}
+
+.Logo {
+  width: 100%;
+  height: 10%;
+  border-bottom: 2px solid black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.logo-text {
+  font-size: 2rem;
+  font-family: "Abril Fatface", serif;
+}
+
+.Page {
+  flex-grow: 1;
+}
+
+.Dashboard {
+  width: 100%;
+  height: 10%;
+  font-family: "Roboto", Courier, monospace;
+  border-bottom: 2px solid black;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
 }
