--- a/javascript/ecom-site/src/index.css
+++ b/javascript/ecom-site/src/index.css
@@ -33,10 +33,6 @@ body {
   align-items: space-around;
 }
 
-.active {
-  font-weight: bold;
-}
-
 .Logo {
   width: 100%;
   height: 10%;
@@ -88,4 +84,19 @@ body {
 
 .cat-list {
   font-size: 2rem;
+}
+
+.product-list {
+  display: flex;
+  flex-direction: column;
+  line-height: 1.5rem;
+}
+
+.active {
+  font-weight: bold;
+}
+
+.big {
+  font-size: 1.2rem;
+  font-weight: bold;
 }
